# arbsimd

./: CMakeLists.txt
.github/workflows/: basic.yml
arbor/include/: CMakeLists.txt
cmake/: CompilerOptions.cmake  arbor-config.cmake.in
doc/: index.rst
doc/internals/: index.rst  simd_api.rst
include/arbsimd/: approx.hpp  avx.hpp  avx512.hpp  compat.hpp  generic.hpp  implbase.hpp  native.hpp  neon.hpp  simd.hpp  simd_io.hpp  sve.hpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
tests/: CMakeLists.txt  common.hpp  test_simd.cpp  test_simd_value.cpp
